[project]
name = "x64dbgpy3"
version = "1.1.1"
description = "A Python 3 framework for automating x64dbg operations via scripting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "lz4",
]

[project.optional-dependencies]
dev = ["capstone", "python-flirt", "mcp[cli]"]