[project]
name = "x64dbgpy3"
version = "1.1.1"
description = "A Python 3 framework for automating x64dbg operations via scripting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "lz4==0.18.0",
]

[project.optional-dependencies]
dev = ["mcp[cli]", "yara-python", "capstone"]
